syntax = "proto3";

// Contains updated state for each widget in a report
message WidgetStates {
  repeated WidgetState widgets = 1;
}

// State for a single widget
message WidgetState {
  string id = 1;

  oneof value {
    // trigger_value is for buttons. A button's value needs to
    // auto-revert back to False after the report has been run with
    // the value set to True. After running the report, the server
    // will reset all trigger_values in its stored Widget state dict.
    // (Use bool_value for widgets like checkboxes, whose state persists
    // beyond a single report run.)
    bool trigger_value = 2;

    bool bool_value = 3;
    float float_value = 4;
    int32 int_value = 5;
    string string_value = 6;
    FloatArray float_array_value = 7;
  }
}

message FloatArray {
  repeated float value = 1;
}
